Feat: add cursor pagination syntax (#104)
feat: add cursor pagination syntax